--- a/poetry.html
+++ b/poetry.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="gbk">
+<meta charset="utf-8">
 <link href="诗词.css" type="text/css" rel="stylesheet" />
 <title>李清照古诗欣赏</title>
 </head>
