--- a/classWeb/index.html
+++ b/classWeb/index.html
@@ -18,7 +18,7 @@
 <header >
 	<h1 id="logo" align="center">13 wangluo class three and four </h1>
 	<nav class="clearfix"><ul>
-		<li class="active fromLeft cssOnly"><a id="nHom" href="class.html"><span>主页</span></a></li>
+		<li class="active fromLeft cssOnly"><a id="nHom" href="index.html"><span>主页</span></a></li>
 		<li class="fromLeft cssOnly"><a id="nAbo" href="班级动态.html"><span>班级动态</span></a></li>
 		<li class="fromTop cssOnly"><a id="nPro" href="班级活动.html"><span>班级活动</span></a></li>
 		<li class="fromBottom cssOnly"><a id="nNew" href="班级建设.html"><span>班级建设</span></a></li>
