--- a/classWeb/班级建设.html
+++ b/classWeb/班级建设.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>班级活动</title>
+<title>班级建设</title>
 <head>
 <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="all">
 <link rel="stylesheet" type="text/css" href="css/div.css" />
