--- a/makerSpace/ckkj.html
+++ b/makerSpace/ckkj.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
@@ -45,38 +46,38 @@
 		</div>
 		<div class="container" >
 	<ul class="nav">
-		<li><a href="shouye.html">Ê×Ò³</a>
-		<li><a href="ckkj.html">´´¿Í¿Õ¼ä</a>		
-		<li><a href="ckcq.html">´´¿Í´«Ææ</a>
-		<li><a href="zzcy.html">ÖÇÔì´´Òâ</a>
-		<li><a href="ckkx.html">´´¿Í¿§Ðã</a>
-		<li><a href="cxxd.html">´´ÏëÐÐ¶¯</a>
+		<li><a href="shouye.html">é¦–é¡µ</a>
+		<li><a href="ckkj.html">åˆ›å®¢ç©ºé—´</a>		
+		<li><a href="ckcq.html">åˆ›å®¢ä¼ å¥‡</a>
+		<li><a href="zzcy.html">æ™ºé€ åˆ›æ„</a>
+		<li><a href="ckkx.html">åˆ›å®¢å’–ç§€</a>
+		<li><a href="cxxd.html">åˆ›æƒ³è¡ŒåŠ¨</a>
 	</ul>
 		</div>
 		
-		<!--½¹µãÍ¼-->
+		<!--ç„¦ç‚¹å›¾-->
 		<div class="film_focus">
 		  <div class="film_focus_desc">
-			<h3>ÈËÈº¶¨Òå</h3>
+			<h3>äººç¾¤å®šä¹‰</h3>
 			<ul class="film_focus_nav">
-			  <li class="cur"> <b>ÈËÈº¶¨Òå</b><span>ÈËÈº¶¨Òå</span> </li>
-			  <li> <b>´´¿ÍÀíÄî</b><span>´´¿ÍÀíÄî</span> </li>
-			  <li> <b>´´¿Í·ÖÀà</b><span>´´¿Í·ÖÀà</span> </li>
-			  <li> <b>´´¿Í´ú±í</b><span>´´¿Í´ú±í</span> </li>
-			  <li> <b>¼ÓÈë´´¿Í</b><span>¼ÓÈë´´¿Í</span> </li>
+			  <li class="cur"> <b>äººç¾¤å®šä¹‰</b><span>äººç¾¤å®šä¹‰</span> </li>
+			  <li> <b>åˆ›å®¢ç†å¿µ</b><span>åˆ›å®¢ç†å¿µ</span> </li>
+			  <li> <b>åˆ›å®¢åˆ†ç±»</b><span>åˆ›å®¢åˆ†ç±»</span> </li>
+			  <li> <b>åˆ›å®¢ä»£è¡¨</b><span>åˆ›å®¢ä»£è¡¨</span> </li>
+			  <li> <b>åŠ å…¥åˆ›å®¢</b><span>åŠ å…¥åˆ›å®¢</span> </li>
 			</ul>
 		  </div>
 		  <div class="film_focus_imgs_wrap">
 			<ul class="film_focus_imgs">
-			  <li><a target="_blank" href="ckkj1.html"><img  src="images/0.jpg" alt="ÈËÈº¶¨Òå" width="626" height="340" /></a></li>
-			  <li><a target="_blank" href="ckkj2.html"><img  src="images/00.jpg" alt="´´¿ÍÀíÄî" width="626" height="340"/></a></li>
-			  <li><a target="_blank" href="ckkj3.html"><img src="images/2.jpg" alt="´´¿Í·ÖÀà" width="626" height="340"/></a></li>
-			  <li><a target="_blank" href="ckkj4.html"><img  src="images/3.jpg" alt="´´¿Í´ú±í" width="626" height="340"/></a></li>
-			  <li><a target="_blank" href="ckkj5.html"><img  src="images/4.jpg" alt="¼ÓÈë´´¿Í" width="626" height="340" /></a></li>
+			  <li><a target="_blank" href="ckkj1.html"><img  src="images/0.jpg" alt="äººç¾¤å®šä¹‰" width="626" height="340" /></a></li>
+			  <li><a target="_blank" href="ckkj2.html"><img  src="images/00.jpg" alt="åˆ›å®¢ç†å¿µ" width="626" height="340"/></a></li>
+			  <li><a target="_blank" href="ckkj3.html"><img src="images/2.jpg" alt="åˆ›å®¢åˆ†ç±»" width="626" height="340"/></a></li>
+			  <li><a target="_blank" href="ckkj4.html"><img  src="images/3.jpg" alt="åˆ›å®¢ä»£è¡¨" width="626" height="340"/></a></li>
+			  <li><a target="_blank" href="ckkj5.html"><img  src="images/4.jpg" alt="åŠ å…¥åˆ›å®¢" width="626" height="340" /></a></li>
 			</ul>
 		  </div>
 		</div>
-		<!--½¹µãÍ¼END--> 
+		<!--ç„¦ç‚¹å›¾END--> 
 		<script type="text/javascript">
 		(function(A){
 			A.fn.th_video_focus=function(E){
@@ -181,8 +182,8 @@
 		
 		<div id="footer" style="width:860px; margin-left:260px;">
 		   <div id="footer1">
-			   <h4>ÓÐÏÞ¿Õ¼ä&nbsp;&nbsp;ÎÞÏÞ´´Òâ&nbsp;&nbsp;°æÈ¨ËùÓÐ</h4></p>
-			   <h5>¿ª·¢ÍÅ¶Ó£ºÎâ°®ÃÀ&nbsp;&nbsp;Ò¶»ªÇå&nbsp;&nbsp;ºî½ÜÁÕ&nbsp;&nbsp;ñûÁ¢»Ô</h5></p>
+			   <h4>æœ‰é™ç©ºé—´&nbsp;&nbsp;æ— é™åˆ›æ„&nbsp;&nbsp;ç‰ˆæƒæ‰€æœ‰</h4></p>
+			   <h5>å¼€å‘å›¢é˜Ÿï¼šå´çˆ±ç¾Ž&nbsp;&nbsp;å¶åŽæ¸…&nbsp;&nbsp;ä¾¯æ°ç³&nbsp;&nbsp;è¦ƒç«‹è¾‰</h5></p>
 		  </div>
 		</div>
 </div>
