--- a/makerSpace/en-ckcq.html
+++ b/makerSpace/en-ckcq.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -111,7 +112,7 @@
 </tr>
 <tr>
 <td height="180px"><img  src="images/yechen.jpg" width="281px" height="180px"></td>
-<td><img  src="images/88954619 - ¸±±¾.jpg" width="291px" height="180px"></td>
+<td><img  src="images/88954619 - Â¸Â±Â±Â¾.jpg" width="291px" height="180px"></td>
 <td width="280px"><img src="images/153139718.jpg"  width="278px" height="180px"></td>
 </tr>
 <tr>
@@ -151,7 +152,7 @@ Firewood record passenger space meaning to "Many hands make light" for the innov
 <div id="footer"style="width:880px; height:45px; margin-left:250px">
    <div id="footer1">
        <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-       <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+       <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 	</div>
 	</center>
 </div>
