--- a/makerSpace/en-ckkj.html
+++ b/makerSpace/en-ckkj.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
@@ -55,7 +56,7 @@
 	</ul>
 	</div>
 	
-	<!--½¹µãÍ¼-->
+	<!--Â½Â¹ÂµÃ£ÃÂ¼-->
 	<div class="film_focus">
 	  <div class="film_focus_desc">
 		<h3>Crowd definitions</h3>
@@ -77,7 +78,7 @@
 		</ul>
 	  </div>
 	</div>
-	<!--½¹µãÍ¼END--> 
+	<!--Â½Â¹ÂµÃ£ÃÂ¼END--> 
 	<script type="text/javascript">
 	(function(A){
 		A.fn.th_video_focus=function(E){
@@ -183,7 +184,7 @@
 	<div id="footer"style="width:860px; margin-left:260px;">
 	   <div id="footer1">
 		   <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-		   <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+		   <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 		</div>
 	</div>
 </div>
