--- a/makerSpace/en-ckkj3.html
+++ b/makerSpace/en-ckkj3.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	
@@ -110,7 +111,7 @@ They are hit off the elves, they are good at identify problems and find ways to 
 	<div id="footer"  style="margin-top:50px;width:860px; margin-left:245px;">
 	   <div id="footer1">
 		   <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-		   <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+		   <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 		</div>
 	</div>
 </div>
