--- a/makerSpace/en-ckkj4.html
+++ b/makerSpace/en-ckkj4.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	
@@ -101,7 +102,7 @@ Why is Steve Wozniak, he founded together rather than Apple's Steve Jobs, who wa
        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.Adrian Bowyer doctor</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 RepRap open source project, Dr. Adrian Bowyer, Senior Lecturer in Mechanical Engineering University of Bath, England have not created, there is no ascendant 3D printer family oriented sport, UK Engineering and Physical Sciences Research Council to provide some funding to start RepRap open source project.</p>
-       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3¡¢Chris Anderson</p>
+       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3Â¡Â¢Chris Anderson</p>
 	   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The honorable guest resigned create the world's attention the United States, "Connection" magazine (Wired) editor duties to concentrate on his open-source projects and robotics start-up companies, he explained: "For me, this is a pursuit opportunity entrepreneurial dream, "wired" the mission is the impact and record digital revolution, this mission will continue to follow and expand.</p></b>
 	
 	 </h3>
@@ -110,7 +111,7 @@ RepRap open source project, Dr. Adrian Bowyer, Senior Lecturer in Mechanical Eng
 	<div id="footer"  style="margin-top:50px;width:860px; margin-left:245px;">
 	   <div id="footer1">
 		   <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-		   <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+		   <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 		</div>
 	</div>
 </div>
