--- a/makerSpace/en-rw-didawei.html
+++ b/makerSpace/en-rw-didawei.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	
@@ -67,7 +68,7 @@
 <div id="san" style="height:1190px;">
   <<div><p><h1 align="center">New workshop Li Dawei</h1></p><br></div>
    <div align="center">
-	<img src="images/88954619 - ¸±±¾.jpg" width="360px" height="250px">
+	<img src="images/88954619 - Â¸Â±Â±Â¾.jpg" width="360px" height="250px">
 	</div>
 	<Div>
   <h3 >
@@ -93,7 +94,7 @@ This is both a popular hit off the culture itself is to create customer behavior
 <div id="footer" style="margin-top:50px;width:860px; margin-left:245px;">
    <div id="footer1">
        <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-       <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+       <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 	</div>
 </div>
 </body>
