--- a/makerSpace/en-rw-huochuang.html
+++ b/makerSpace/en-rw-huochuang.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<meta charset="utf-8">
 <html>
 <head>
 	
@@ -108,7 +109,7 @@
 <div id="footer"style="margin-top:50px;width:860px; margin-left:245px;">
    <div id="footer1">
        <h4>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h4></p>
-       <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+       <h5>Development teamÂ£ÂºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 	</div>
 </div>
 </body>
