--- a/makerSpace/en-zzcy.html
+++ b/makerSpace/en-zzcy.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html><head>
+<!doctype html>
+<meta charset="utf-8">
+<html>
+<head>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/navigation.css">
 	<link rel="stylesheet" type="text/css" href="css/qb.css">
@@ -31,7 +33,7 @@
 		#slider{width:843px;height:334px;margin:0 auto;}
 		#slider img{display:block;}
 		#slider-mask{
-		             background:url(../ÓĞÏŞ¿Õ¼ä£¬ÎŞÏŞ´´Òâ11/images/slider1.png) no-repeat;
+		             background:url(../æœ‰é™ç©ºé—´ï¼Œæ— é™åˆ›æ„11/images/slider1.png) no-repeat;
 		             width:1043px;
 					 height:374px;margin:
 					 40px auto 0 auto;
@@ -54,7 +56,7 @@
 							z-index:99
 							}
 		#title1{
-							background-image:url(../ÓĞÏŞ¿Õ¼ä£¬ÎŞÏŞ´´Òâ11/images/t1.png);
+							background-image:url(../æœ‰é™ç©ºé—´ï¼Œæ— é™åˆ›æ„11/images/t1.png);
 							width:843px;
 							height:36px;
 							margin-left:250px;
@@ -468,7 +470,7 @@ The influence of different wavelength and frequency of energy wave on the materi
 <div id="footer" style="width:880px; margin-top:0px; margin-left:245px">
    <div id="footer1">
        <h5>Limited Space &nbsp;&nbsp;Unlimited Creativity &nbsp;&nbsp;All rights reserved</h5></p>
-       <h5>Development team£ºWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
+       <h5>Development teamï¼šWu aimei &nbsp;&nbsp;Ye hauqing&nbsp;&nbsp;Hou jielin &nbsp;&nbsp;Qin lihui</h5></p>
 	</div>
 </div>
 </div>
